Reglages contrastes et autres correctitons

--- a/Desktop/DEVWEB/P4/LaPanthère/style.css
+++ b/Desktop/DEVWEB/P4/LaPanthère/style.css
@@ -284,7 +284,12 @@ a:hover {
 }
 
 #bloc-1-hero h1 {
-    font-size: 32px;
+    color: #FFFFFF!important;
+}
+
+#bloc-1-hero h2 {
+    text-align: center;
+    color: #FFFFFF!important;
 }
 
 .navbar {
@@ -323,8 +328,9 @@ a:hover {
 }
 
 .nav > li {
+    list-style-type: none;
     float: left;
-    margin-top: 4px;
+    margin: 10px;
     font-size: 16px;
 }
 
@@ -677,7 +683,7 @@ a {
 }
 
 p {
-    font-size: 11px;
+    font-size: 20px;
 }
 
 .tight-width-whitespace {
@@ -775,7 +781,8 @@ h4 {
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: white!important;
+    align-items: center;
 }
 
 .btn-atomic-tangerine {
